--- a/builder/Cargo.toml
+++ b/builder/Cargo.toml
@@ -20,5 +20,5 @@ path = "src/main.rs"
 trybuild = { version = "1.0.49", features = ["diff"] }
 
 [dependencies]
-syn = { version = "1.0.86", features = ["extra-traits"] }
-quote = "1.0.15"
+syn = { workspace = true }
+quote = { workspace = true }
