--- a/sorted/Cargo.toml
+++ b/sorted/Cargo.toml
@@ -16,4 +16,9 @@ path = "tests/progress.rs"
 trybuild = { version = "1.0.49", features = ["diff"] }
 
 [dependencies]
-# TODO
+syn = { version = "0.15", features = ["extra-traits", "full", "visit-mut"] }
+proc-macro2 = "0.4.30"
+# TODO version 1.0.0 以降だと動かない。動くバージョンでデバッグして意図を掴んで書き換える
+#quote = "1.0.33"
+quote = "0.6.13"
+
