--- a/debug/Cargo.toml
+++ b/debug/Cargo.toml
@@ -15,6 +15,10 @@ path = "tests/progress.rs"
 [dev-dependencies]
 trybuild = { version = "1.0.49", features = ["diff"] }
 
+[[bin]]
+name = "main"
+path = "src/main.rs"
+
 [dependencies]
 proc-macro2 = "1.0.10"
 syn = "1.0.17"
