--- a/bitfield/impl/Cargo.toml
+++ b/bitfield/impl/Cargo.toml
@@ -8,4 +8,10 @@ publish = false
 proc-macro = true
 
 [dependencies]
-# TODO
+syn = {version="1.0.17", features=["full", "extra-traits"]}
+quote = { workspace = true }
+proc-macro2 = { workspace = true }
+
+
+[features]
+nightly = []
