--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ sorted = { path = "sorted" }
 [workspace.dependencies]
 syn = { version = "1.0.86", features = ["extra-traits"] }
 quote = "1.0.15"
+proc-macro2 = "1.0.68"
